apply demo UI to project

--- a/app/demo/index.html
+++ b/app/demo/index.html
@@ -24,75 +24,74 @@
 
 				<ul class="list-group all">
 					<li class="list-group-item">
-						<span class="badge">14</span>
-						<a href="#">
+						<a href="#" class="current">
 							<h2>有没有把 Mac 当作主机，iPhone 当作控制设备的游戏？</h2>
 							<p><strong>usrname</strong><span>desription</span></p>
+							<span class="badge">14</span>
 						</a>
 					</li>
 					<li class="list-group-item">
-						<span class="badge">14</span>
-						Cras justo odio
+						<a href="#">
+							<h2>Cras justo odio</h2>
+							<p><strong>usrname</strong><span>desription</span></p>
+							<span class="badge">14</span>
+						</a>
 					</li>
 					<li class="list-group-item">
-						<span class="badge">14</span>
-						Cras justo odio
+						<a href="#">
+							<h2>Cras justo odio</h2>
+							<p><strong>usrname</strong><span>desription</span></p>
+							<span class="badge">14</span>
+						</a>
 					</li>
 					<li class="list-group-item">
-						<span class="badge">14</span>
-						Cras justo odio
+						<a href="#">
+							<h2>Cras justo odio</h2>
+							<p><strong>usrname</strong><span>desription</span></p>
+							<span class="badge">14</span>
+						</a>
 					</li>
 					<li class="list-group-item">
-						<span class="badge">14</span>
-						Cras justo odio
+						<a href="#">
+							<h2>Cras justo odio</h2>
+							<p><strong>usrname</strong><span>desription</span></p>
+							<span class="badge">14</span>
+						</a>
 					</li>
 					<li class="list-group-item">
-						<span class="badge">14</span>
-						Cras justo odio
+						<a href="#">
+							<h2>Cras justo odio</h2>
+							<p><strong>usrname</strong><span>desription</span></p>
+							<span class="badge">14</span>
+						</a>
 					</li>
 					<li class="list-group-item">
-						<span class="badge">14</span>
-						Cras justo odio
+						<a href="#">
+							<h2>Cras justo odio</h2>
+							<p><strong>usrname</strong><span>desription</span></p>
+							<span class="badge">14</span>
+						</a>
 					</li>
 					<li class="list-group-item">
-						<span class="badge">14</span>
-						Cras justo odio
+						<a href="#">
+							<h2>Cras justo odio</h2>
+							<p><strong>usrname</strong><span>desription</span></p>
+							<span class="badge">14</span>
+						</a>
 					</li>
 					<li class="list-group-item">
-						<span class="badge">14</span>
-						Cras justo odio
+						<a href="#">
+							<h2>Cras justo odio</h2>
+							<p><strong>usrname</strong><span>desription</span></p>
+							<span class="badge">14</span>
+						</a>
 					</li>
 					<li class="list-group-item">
-						<span class="badge">14</span>
-						Cras justo odio
-					</li>
-					<li class="list-group-item">
-						<span class="badge">14</span>
-						Cras justo odio
-					</li>
-					<li class="list-group-item">
-						<span class="badge">14</span>
-						Cras justo odio
-					</li>
-					<li class="list-group-item">
-						<span class="badge">14</span>
-						Cras justo odio
-					</li>
-					<li class="list-group-item">
-						<span class="badge">14</span>
-						Cras justo odio
-					</li>
-					<li class="list-group-item">
-						<span class="badge">14</span>
-						Cras justo odio
-					</li>
-					<li class="list-group-item">
-						<span class="badge">14</span>
-						Cras justo odio
-					</li>
-					<li class="list-group-item">
-						<span class="badge">14</span>
-						Cras justo odio
+						<a href="#">
+							<h2>Cras justo odio</h2>
+							<p><strong>usrname</strong><span>desription</span></p>
+							<span class="badge">14</span>
+						</a>
 					</li>
 				</ul>
 
