--- a/app/index.html
+++ b/app/index.html
@@ -3,17 +3,21 @@
 <head>
   <meta charset="utf-8">
   <title>My AngularJS App</title>
+  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="css/app.css"/>
+  <script src="bower_components/jquery/jquery.js"></script>
 </head>
 <body>
-  <ul class="menu">
+<!--   <ul class="menu">
     <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
-  </ul>
+    <li><a href="#/view1">view2</a></li>
+  </ul> -->
 
-  <div ng-view></div>
 
-  <div>Angular seed app: v<span app-version></span></div>
+
+  <div class="container" ng-view></div>
+
+  <!-- <div>Angular seed app: v<span app-version></span></div> -->
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
