--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>My AngularJS App</title>
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" 
+        href="bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="css/app.css"/>
   <script src="bower_components/jquery/jquery.js"></script>
 </head>
@@ -25,6 +26,8 @@
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular/angular-route.js"></script>
   <script src="lib/angular/angular-sanitize.min.js"></script>
+  <script src="bower_components/ngInfiniteScroll/ng-infinite-scroll.js">
+  </script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
